# Matrix-Calc

./: CMakeLists.txt  aghComplex.cpp  aghComplex.h  aghException.h  aghInclude.h  aghMatrix.cpp  aghMatrix.h  combineCollections.cpp  combineCollections.h  ex2main.cpp  intersectCollections.cpp  intersectCollections.h  stringHelper.cpp  stringHelper.h
